k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scalable-ai
  labels:
    app.kubernetes.io/part-of: scalable-ai-infra
    env: production
